<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="20dp">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_notas"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/notas"
        android:layout_marginBottom="12dp"
        app:hintTextColor="@color/text_input_hint"
        app:boxStrokeColor="@color/text_input_stroke"
        app:boxBackgroundColor="#EEF7FB">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_notas"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/on_primary"
            android:inputType="textMultiLine"
            android:minLines="2" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_duracion"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/duracion_min"
        android:layout_marginBottom="12dp"
        app:hintTextColor="@color/text_input_hint"
        app:boxStrokeColor="@color/text_input_stroke"
        app:boxBackgroundColor="#EEF7FB">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_duracion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/on_primary"
            android:inputType="number" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/switch_pausable"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pausable"
        android:textColor="@color/on_primary"
        android:layout_marginBottom="8dp" />

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/switch_require_full"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/requerir_timer_completo"
        android:textColor="@color/on_primary" />

</LinearLayout>
